--- a/css/inicio.css
+++ b/css/inicio.css
@@ -9,6 +9,11 @@
   justify-content: center;
   align-items: center;
   z-index: 2;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
 }
 
 .wrapper .sidenav .list {
@@ -24,7 +29,7 @@
 
 section {
   height: 100vh;
-  padding: 30px;
+  /* padding: 30px; */
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -226,4 +231,54 @@ section::-webkit-scrollbar {
   -moz-transform: translateY(100px);
   -ms-transform: translateY(100px);
   -o-transform: translateY(100px);
+}
+
+.side-none{
+  transform: translateX(-400px);
+  -webkit-transform: translateX(-400px);
+  -moz-transform: translateX(-400px);
+  -ms-transform: translateX(-400px);
+  -o-transform: translateX(-400px);
+}
+
+.main-full{
+  width: 100vw !important;
+  margin-left: 0 !important;
+}
+
+.close-modal{
+  background: var(--primary);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.content-o-s{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 15px 35px;
+}
+
+.content-o-s i{
+  font-size: 25px;
+}
+
+.open-menu, .search, .close-modal{
+  cursor: pointer;
 }
