--- a/css/inicio.css
+++ b/css/inicio.css
@@ -287,3 +287,52 @@
 .open-menu, .search, .close-modal{
   cursor: pointer;
 }
+
+
+@media screen and (max-width: 1024px) {
+  .wrapper .sidenav{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+  }
+
+  .side-none{
+    transform: translateX(-100vw);
+    -webkit-transform: translateX(-100vw);
+    -moz-transform: translateX(-100vw);
+    -ms-transform: translateX(-100vw);
+    -o-transform: translateX(-100vw);
+}
+  .wrapper .main-content{
+    width: 100vw !important;
+  }
+
+  .info-serie{
+    width: 100%;
+    margin-top: 110px;
+    z-index: 3;
+  }
+
+  .info-serie .title{
+    font-size: 36px;
+    margin-top: 5px;
+    margin-bottom: -15px;
+  }
+
+  .info-serie .title-2{
+    font-size: 26px;
+    margin-top: 5px;
+  }
+
+  .info-serie .info{
+    font-size: 14px;
+  }
+
+  .series-container{
+    margin-top: 0px;
+  }
+
+  .vid{
+    height: 50%;
+  }
+}
