--- a/css/inicio.css
+++ b/css/inicio.css
@@ -9,11 +9,11 @@
   justify-content: center;
   align-items: center;
   z-index: 2;
-  transition: .3s;
-  -webkit-transition: .3s;
-  -moz-transition: .3s;
-  -ms-transition: .3s;
-  -o-transition: .3s;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
 }
 
 .wrapper .sidenav .list {
@@ -25,8 +25,12 @@
 .wrapper .main-content {
   width: 80vw;
   margin-left: 20vw;
+  transition: 0.3s ease all;
+  -webkit-transition: 0.3s ease all;
+  -moz-transition: 0.3s ease all;
+  -ms-transition: 0.3s ease all;
+  -o-transition: 0.3s ease all;
 }
-
 
 .vid {
   width: 100%;
@@ -38,7 +42,7 @@
 
 .info-serie {
   width: 55rem;
-  margin-top: 30rem;
+  margin-top: 32rem;
 }
 
 .info-serie .controls {
@@ -105,7 +109,7 @@
 
 .grid-series {
   display: grid;
-  grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   gap: 20px;
   margin-top: 1rem;
 }
@@ -138,37 +142,8 @@
   align-items: center;
 }
 
-.modal-full{
+.modal-full {
   width: 100vw !important;
-}
-
-.modal .close {
-  position: absolute;
-  top: 5rem;
-  right: 24rem;
-  background: var(--primary);
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  z-index: 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  font-size: 18px;
-}
-
-.modal-full .close-full-w{
-  right: 36rem;
-}
-
-.modal .close:hover {
-  filter: opacity(80%);
-  -webkit-filter: opacity(80%);
 }
 
 .modal img {
@@ -233,7 +208,7 @@
   -o-transform: translateY(100px);
 }
 
-.side-none{
+.side-none {
   transform: translateX(-400px);
   -webkit-transform: translateX(-400px);
   -moz-transform: translateX(-400px);
@@ -241,12 +216,12 @@
   -o-transform: translateX(-400px);
 }
 
-.main-full{
+.main-full {
   width: 100vw !important;
   margin-left: 0 !important;
 }
 
-.close-modal{
+.close-modal {
   background: var(--primary);
   border-radius: 50%;
   width: 30px;
@@ -263,7 +238,7 @@
   -o-border-radius: 50%;
 }
 
-.content-o-s{
+.content-o-s {
   position: absolute;
   top: 0;
   left: 0;
@@ -280,99 +255,155 @@
   padding: 30px;
 }
 
-.content-o-s i{
+.content-o-s i {
   font-size: 25px;
 }
 
-.open-menu, .search, .close-modal{
+.open-menu,
+.search,
+.close-modal {
   cursor: pointer;
 }
 
-
 @media screen and (max-width: 1024px) {
-  .wrapper .sidenav{
+  .wrapper .sidenav {
     position: fixed;
     width: 100%;
     height: 100%;
   }
 
-  .side-none{
+  .side-none {
     transform: translateX(-100vw);
     -webkit-transform: translateX(-100vw);
     -moz-transform: translateX(-100vw);
     -ms-transform: translateX(-100vw);
     -o-transform: translateX(-100vw);
-}
-  .wrapper .main-content{
+  }
+  .wrapper .main-content {
     width: 100vw !important;
     margin-left: 0 !important;
   }
 
-  .info-serie{
+  .info-serie {
     width: 100%;
     margin-top: 110px;
     z-index: 3;
   }
 
-  .info-serie .title{
+  .info-serie .title {
     font-size: 36px;
     margin-top: 5px;
     margin-bottom: -15px;
   }
 
-  .info-serie .title-2{
+  .info-serie .title-2 {
     font-size: 26px;
     margin-top: 5px;
   }
 
-  .info-serie .info{
+  .info-serie .info {
     font-size: 14px;
   }
 
-  .series-container{
+  .series-container {
     margin-top: 0px;
   }
 
-  .vid{
-    height: 50%;
+  .vid {
+    height: 440px;
+  }
+
+  .display-active {
+    transform: translateY(80px);
+    -webkit-transform: translateY(80px);
+    -moz-transform: translateY(80px);
+    -ms-transform: translateY(80px);
+    -o-transform: translateY(80px);
+  }
+
+  .modal .modal-container {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .modal .modal-container {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .grid-series{
+    grid-template-columns: 100%;
+  }
+  .display-active {
+    transform: translateY(105px);
+    -webkit-transform: translateY(105px);
+    -moz-transform: translateY(105px);
+    -ms-transform: translateY(105px);
+    -o-transform: translateY(105px);
+  }
+
+  .modal .modal-container {
+    width: 80%;
   }
 }
 
 @media screen and (max-width: 496px) {
-  .info-serie{
+  .series-container{
+    padding: 20px;
+  }
+  .info-serie {
     margin-top: 135px;
   }
-  .info-serie .title{
+  .info-serie .title {
     font-size: 31px;
   }
-  .info-serie .title-2{
+  .info-serie .title-2 {
     font-size: 22px;
   }
-  .info-serie .info{
+  .info-serie .info {
     max-height: 80px;
     overflow: auto;
   }
 
-  button{
+  button {
     font-size: 16px;
   }
 
-  .info-serie .serie{
+  .info-serie .serie {
     font-size: 20px;
   }
-  .info-serie .serie .icon{
+  .info-serie .serie .icon {
     width: 20px;
     height: 20px;
     font-size: 10px;
   }
 }
 
+@media screen and (max-width: 425px) {
+  .info-serie {
+    margin-top: 115px !important;
+  }
+}
+
 @media screen and (max-width: 390px) {
-  .info-serie .info{
+  .info-serie {
+    margin-top: 145px !important;
+  }
+  .info-serie .title {
+    font-size: 26px;
+  }
+
+  .info-serie .title-2 {
+    font-size: 18px;
+  }
+
+  .info-serie .info {
     max-height: 40px;
   }
 
-  .info-serie .controls{
+  .info-serie .controls {
     flex-direction: column;
     width: 100%;
     gap: 10px;
@@ -380,15 +411,17 @@
     justify-content: center;
   }
 
-  /* .controls button{
-    width: 100%;
-  } */
-
-  .display-active{
+  .display-active {
     transform: translateY(45px);
     -webkit-transform: translateY(45px);
     -moz-transform: translateY(45px);
     -ms-transform: translateY(45px);
     -o-transform: translateY(45px);
+  }
 }
+
+@media screen and (max-width: 353px) {
+  .info-serie .title {
+    font-size: 22px;
+  }
 }
